# src/routes/usuarios.routes.ts
@@ -1,7 +1,16 @@
+/**
+ * lembrar de seguir o padrão que está em docs\openapi.yaml
+ */   
 import { Router } from 'express';
+import { asyncHandler } from '../middlewares/error';
 import { UserController } from '../controllers/usuarios.controller';
 
+
 const router = Router();
-router.get('/', UserController.listar);
-router.post('/', UserController.criar);
+
+router.get('/', asyncHandler(UserController.findAll));
+router.get('/:id', asyncHandler(UserController.findById));
+router.post('/', asyncHandler(UserController.create));
+router.put('/:id', asyncHandler(UserController.update));
+
 export default router;
